// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render collapse close 1`] = `
<div>
  <div
    class=" mt-3 collapse undefined"
  >
    <div
      class="card card-body"
    >
      <div
        class="d-flex justify-content-center align-items-center"
        data-testid="loading-component"
      >
        <div
          class="spinner-border"
          role="status"
          style="width: 5rem; height: 5rem;"
        >
          <span
            class="sr-only"
          >
            Loading...
          </span>
        </div>
      </div>
      <div
        class="row justify-content-center"
      >
        <div
          class="col-12 col-md-8 mt-3 text-center d-flex justify-content-center"
        >
          <nav>
            <ul
              class="pagination pagination-sm"
              data-testid="pagination"
            />
          </nav>
        </div>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="col-12 col-md-12"
      />
    </div>
  </div>
</div>
`;

exports[`should render collapse open 1`] = `
<DocumentFragment>
  <div
    class=" mt-3 collapse show"
  >
    <div
      class="card card-body"
    >
      <h2
        class="text-center"
      >
        No se pudieron cargar los datos.
      </h2>
      <div
        class="row justify-content-center"
      >
        <div
          class="col-12 col-md-8 mt-3 text-center d-flex justify-content-center"
        >
          <nav>
            <ul
              class="pagination pagination-sm"
              data-testid="pagination"
            />
          </nav>
        </div>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="col-12 col-md-12"
      >
        <div
          class="recharts-responsive-container"
          style="width: 99%; height: 100%;"
        >
          <div
            style="position: absolute; width: 0px; height: 0px; visibility: hidden; display: none;"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
